--- a/docker_images/dev/Dockerfile
+++ b/docker_images/dev/Dockerfile
@@ -1,11 +1,16 @@
-FROM python:3.10.11
+# FROM python:3.10.11
+FROM ubuntu:22.04
 
 # Install system level dependencies
-RUN python -m pip install gunicorn flask
+RUN apt-get update 
+RUN apt-get install ffmpeg python3.10 python3-pip python3.10-venv -y
 
 # Install pypoetry
-RUN curl -sSL https://install.python-poetry.org | python3 -
-ENV PATH="${PATH}:/root/.local/bin"
+ENV POETRY_HOME="/opt/poetry/"
+ENV PATH="${PATH}:/opt/poetry/bin"
+RUN python3 -m venv $POETRY_HOME
+RUN $POETRY_HOME/bin/pip install poetry
+RUN $POETRY_HOME/bin/poetry --version
 
 # Put the app's directory in the top level of the container
 COPY ./ /transcript
